# hw_web_14

contacts_api/: docker-compose.yml  main.py  pyproject.toml
contacts_api/alembic/: env.py
contacts_api/alembic/versions/: 0ffaabbb1f8a_create_users_table.py  1368347c4c0c_add_avatar_url_to_users.py  39ed722e1c0f_update_models_with_new_fields_and_.py  82ff00a10411_create_users_table.py  ba4c3cf6906d_add_is_verified_column_to_users.py  c214aff3b37c_init.py  ef4d76abe0b9_add_refresh_token_to_users.py
contacts_api/docs/: conf.py  index.rst
contacts_api/docs/_build/doctrees/: environment.pickle  index.doctree
contacts_api/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
contacts_api/src/: schemas.py
contacts_api/src/auths/: auth.py
contacts_api/src/auths/service/: email_verification.py
contacts_api/src/database/: config.ini  create_db.py  create_table.py  db.py  models.py
contacts_api/src/repository/: repository.py
contacts_api/src/routes/: router.py
contacts_api/tests/: conftest.py  test_auths.py  test_main.py  test_repository.py  test_routes.py
